<resources>
    <string name="mine_app_name">Mine</string>
    <string name="mine_play">播放</string>

    <string name="mine_username">用户名</string>
    <string name="mine_password">密码</string>
    <string name="mine_login">登录</string>
    <string name="mine_please_input_username">请输入用户名</string>
    <string name="mine_please_input_psw">请输入密码</string>
    <string name="mine_is_logining">正在登录</string>
    <string name="mine_or">Or</string>
    <string name="mine_register">注册</string>
    <string name="mine_is_registering">正在注册</string>

    <!--home-->
    <string name="mine_attention">关注：</string>
    <string name="mine_fans">粉丝：</string>
    <string name="mine_slash">/</string>
    <string name="mine_open_now">立即开通</string>
    <string name="mine_vip_privilege">开通会员尊享特权</string>
    <string name="mine_vip">VIP</string>

    <string name="mine_my_service">我的服务</string>
    <string name="mine_essential_tools">必备工具</string>
    <string name="mine_my_wallet">我的钱包</string>
    <string name="mine_my_grade">我的等级</string>
    <string name="mine_recommend_gift">推荐有礼</string>
    <string name="mine_contact_service">联系客服</string>
    <string name="mine_timing_play">定时播放</string>


    <!--setting-->
    <string name="mine_account_settings">账号设置</string>
    <string name="mine_phone_binding">手机绑定</string>
    <string name="mine_account_security">账号安全</string>
    <string name="mine_application_settings">应用设置</string>
    <string name="mine_clear_cache">缓存清除</string>
    <string name="mine_other">其他</string>
    <string name="mine_message_notice">消息通知</string>
    <string name="mine_favorable_comment">给个好评</string>
    <string name="mine_app_version">版本信息</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_now_version">当前版本V %s</string>


    <string name="mine_free_book">免费求书</string>
    <string name="mine_sign_out">退出登录</string>
    <string name="mine_login_and_register">登录/注册</string>
    <string name="mine_login_tips">登录享受更多功能</string>
    <string name="mine_login_out_title">退出登录</string>
    <string name="mine_login_out_tips">退出后，将无法收听已购节目\n无法接收订阅更新</string>
    <string name="mine_login_out_sure">坚持退出</string>
    <string name="mine_login_out_cancel">保持登陆</string>

    <string name="mine_loginout_title">注销账号</string>
    <string name="mine_loginout_tips">确定要注销账号？</string>
    <string name="mine_loginout_sure">不注销</string>
    <string name="mine_loginout_cancel">注销</string>

    <!--personal info-->
    <string name="mine_avatar">头像</string>
    <string name="mine_nickname">昵称</string>
    <string name="mine_sex">性别</string>
    <string name="mine_birthday">生日</string>
    <string name="mine_address">所在地</string>


    <!--play setting-->
    <string name="mine_play_setting_net_name">使用2G/3G/4G网络播放提醒</string>
    <string name="mine_play_setting_net_tip">关闭后，使用流量听书将不会弹框提示</string>
    <string name="mine_play_setting_next_name">自动播放下一首</string>
    <string name="mine_play_setting_next_tip">当前曲目播放完，自动播放下一首</string>
    <string name="mine_play_setting_last_play_name">继续上一次播放</string>
    <string name="mine_play_setting_last_play_tip">启动听书后，自动继续上一次播放</string>

    <!--download setting-->
    <string name="mine_download_setting_name">Wi-Fi连接时下载</string>
    <string name="mine_download_setting_tip">是否只在Wi-Fi连接时才可以下载</string>

    <!--account security setting-->
    <string name="mine_change_password">修改密码</string>
    <string name="mine_modify">修改</string>
    <string name="mine_recently_logged_device">最近登录设备</string>
    <string name="mine_logout">注销账号</string>
    <string name="mine_logout_tip">删除所有数据，永久注销账号</string>
    <string name="mine_enter_signature">请输入您的个人签名</string>

    <!--title-->
    <string name="mine_change_nickname">修改昵称</string>
    <string name="mine_download_setting">下载设置</string>
    <string name="mine_account_security_setting">账号安全设置</string>
    <string name="mine_personal_info">个人资料</string>
    <string name="mine_signature">个人签名</string>
    <string name="mine_play_settings">播放设置</string>
    <string name="mine_settings">设置</string>

    <string name="mine_secret">保密</string>
    <string name="mine_man">男</string>
    <string name="mine_woman">女</string>
    <string name="mine_unfilled">未填写</string>


    <string name="mine_shoot">拍摄</string>
    <string name="mine_album">从手机相册选择</string>

    <string name="mine_certified_anchor">认证主播</string>

    <string name="mine_signature_num" formatted="false">%d</string>
    <string name="mine_signature_num_text">/50</string>

    <string name="mine_release_books">发布的书籍</string>
    <string name="mine_create_sheet">创建的听单</string>
    <string name="mine_favor_sheet">收藏的听单</string>
    <string name="mine_fans_num">粉丝：</string>
    <string name="mine_attention_num">关注：</string>
    <string name="mine_chapter">章</string>
    <string name="mine_prefix">(</string>
    <string name="mine_suffix">)</string>

    <string name="mine_author_name">作者名</string>
    <string name="mine_hint_book_info_tips">填写你想寻找的书籍名称</string>
    <string name="mine_book_info">书籍信息</string>
    <string name="mine_hint_book_author_tips">作者名（选填）</string>
    <string name="mine_hint_book_member_tips">主播名（选填）</string>
    <string name="mine_hint_book_contact_tips">您的邮箱/微信/手机号（选填）</string>
    <string name="mine_member_name">主播名</string>
    <string name="mine_contact">联系方式</string>
    <string name="mine_submit">提交</string>

    <string name="mine_feedback">意见反馈</string>
    <string name="mine_feedback_type">意见反馈类型</string>
    <string name="mine_product_suggestion">产品建议</string>
    <string name="mine_malfunction">功能异常</string>
    <string name="mine_poor_experience">体验不佳</string>
    <string name="mine_feedback_contact">添加联系方式</string>
    <string name="mine_question_depict">问题描述</string>
    <string name="mine_feedback_content_num">/500</string>
    <string name="mine_feedback_hint_content_tips">请尽量详细，方便我们快速定位解决</string>
    <string name="mine_update_version">版本更新</string>
    <string name="mine_cooperation">业务合作</string>
    <string name="mine_web_address">官网地址</string>
    <string name="mine_user_pact">《用户协议》</string>
    <string name="mine_private_pact">《个人信息保护及隐私政策协议》</string>
    <string name="mine_lm_name">深圳雷漫网络科技</string>
    <string name="mine_customer">客服电话：123213</string>
    <string name="mine_newest_version">当前已是最新版本</string>
    <string name="mine_word_count_exceeds_limit">字数超限制</string>
    <string name="mine_fans_empty">没有粉丝，快去为自己创造影响力吧</string>
    <string name="mine_follow_empty">没有关注的人</string>
    <string name="mine_member_not_logout">主播账号不允许销户</string>
    <string name="mine_comment_page">主页</string>
    <string name="mine_comment_home">评论</string>

</resources>