<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.rm.module_mine.widget.MineCommonSettingView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:setting_checked="true"
            app:setting_name="@string/mine_play_setting_net_name"
            app:setting_tip="@string/mine_play_setting_net_tip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@color/business_color_e8e8e8" />

        <com.rm.module_mine.widget.MineCommonSettingView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:setting_checked="true"
            app:setting_name="@string/mine_play_setting_next_name"
            app:setting_tip="@string/mine_play_setting_next_tip" />

        <com.rm.module_mine.widget.MineCommonSettingView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:setting_checked="true"
            app:setting_name="@string/mine_play_setting_last_play_name"
            app:setting_tip="@string/mine_play_setting_last_play_tip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@color/business_color_e8e8e8" />

    </LinearLayout>
</layout>