<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.rm.module_mine.viewmodel.MineSettingViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/dp_60"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BusinessTextStyleThird_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_5"
                android:text="@string/mine_account_settings" />

            <com.rm.module_mine.widget.MineCommonMaterialView
                userText="@{@string/test}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:material_name="@string/mine_personal_info" />

            <com.rm.module_mine.widget.MineCommonMaterialView
                userIcon="@{viewModel.data}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:material_name="@string/mine_phone_binding" />

            <com.rm.module_mine.widget.MineCommonMaterialView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:material_name="@string/mine_account_security" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="@color/business_color_e8e8e8" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BusinessTextStyleThird_4"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_5"
                android:text="@string/mine_application_settings" />

            <com.rm.module_mine.widget.MineCommonMaterialView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:material_name="@string/mine_play_settings" />

            <com.rm.module_mine.widget.MineCommonMaterialView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:material_name="@string/mine_download_setting" />

            <com.rm.module_mine.widget.MineCommonMaterialView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:material_name="@string/mine_clear_cache" />

            <com.rm.module_mine.widget.MineCommonMaterialView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:material_name="@string/mine_message_setting" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="@color/business_color_e8e8e8" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BusinessTextStyleThird_4"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_5"
                android:text="@string/mine_other" />

            <com.rm.module_mine.widget.MineCommonMaterialView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:material_name="@string/mine_free_book" />

            <com.rm.module_mine.widget.MineCommonMaterialView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:material_name="@string/mine_favorable_comment" />
            
            <Button
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                style="@style/BusinessTextStyleSecond_2"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/mine_sign_out"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/business_shape_stroke_b1b1b1_37dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>