<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.rm.module_mine.viewmodel.MinePlaySettingViewModel" />
        <import type="com.rm.business_lib.PlaySettingData"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.rm.module_mine.widget.MineCommonSettingView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            bindMineChecked="@{PlaySettingData.INSTANCE.getNetwork234GAlert()}"
            bindMineCheckAction="@{viewModel.network234GAlertVal}"
            app:setting_name="@string/mine_play_setting_net_name"
            android:layout_marginTop="@dimen/dp_20"
            app:setting_tip="@string/mine_play_setting_net_tip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1pt"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@color/business_color_e8e8e8" />

        <com.rm.module_mine.widget.MineCommonSettingView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            bindMineChecked="@{PlaySettingData.INSTANCE.getAutoPlayNext()}"
            bindMineCheckAction="@{viewModel.autoPlayNextVal}"
            app:setting_name="@string/mine_play_setting_next_name"
            app:setting_tip="@string/mine_play_setting_next_tip" />

        <com.rm.module_mine.widget.MineCommonSettingView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            bindMineChecked="@{PlaySettingData.INSTANCE.getContinueLastPlay()}"
            bindMineCheckAction="@{viewModel.continueLastPlayVal}"
            app:setting_name="@string/mine_play_setting_last_play_name"
            app:setting_tip="@string/mine_play_setting_last_play_tip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1pt"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_6"
            android:background="@color/business_color_e8e8e8" />

    </LinearLayout>
</layout>