<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.rm.module_mine.viewmodel.MinePersonalInfoViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.rm.module_mine.widget.MineCommonMaterialView
            android:id="@+id/mine_personal_avatar"
            userIcon="@{viewModel.userIconUrl}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(view)->viewModel.clickAvatar(view)}"
            app:material_name="@string/mine_avatar" />

        <com.rm.module_mine.widget.MineCommonMaterialView
            android:id="@+id/mine_personal_nickname"
            defaultText="@{@string/mine_unfilled}"
            userText="@{viewModel.userInfo.nickname}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.clickNickname()}"
            app:material_name="@string/mine_nickname" />

        <com.rm.module_mine.widget.MineCommonMaterialView
            android:id="@+id/mine_personal_sex"
            defaultText="@{@string/mine_unfilled}"
            userText="@{viewModel.sex}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(view)->viewModel.clickSex(view)}"
            app:material_name="@string/mine_sex" />

        <com.rm.module_mine.widget.MineCommonMaterialView
            android:id="@+id/mine_personal_birthday"
            defaultText="@{@string/mine_unfilled}"
            userText="@{viewModel.userInfo.birthday}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(view)->viewModel.clickBirthday(view)}"
            app:material_name="@string/mine_birthday" />

        <com.rm.module_mine.widget.MineCommonMaterialView
            android:id="@+id/mine_personal_address"
            defaultText="@{@string/mine_unfilled}"
            userText="@{viewModel.userInfo.address}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.clickAddress(context)}"
            app:material_name="@string/mine_address" />

        <com.rm.module_mine.widget.MineCommonMaterialView
            android:id="@+id/mine_personal_signature"
            defaultText="@{@string/mine_unfilled}"
            userText="@{viewModel.userInfo.signature}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.clickPersonalSignature()}"
            app:material_name="@string/mine_signature" />
    </LinearLayout>
</layout>