<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rm.module_mine.login.LoginViewModel" />

        <variable
            name="title"
            type="com.rm.module_mine.bean.Title" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameLayout"
            style="@style/MineTextInputLayout"
            android:layout_marginTop="80dp"
            android:hint="@string/mine_username">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/userNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@={viewModel.userName}"
                binding:afterTextChanged="@{viewModel.verifyInput}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pswLayout"
            style="@style/MineTextInputLayout"
            android:hint="@string/mine_password"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="@={viewModel.passWord}"
                binding:afterTextChanged="@{viewModel.verifyInput}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/businessColorPrimary"
            android:enabled="@{viewModel.uiState.enableLoginButton}"
            android:onClick="@{() -> viewModel.login()}"
            android:text="@string/mine_login"
            android:textColor="@color/businessWhite"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/businessColorPrimary"
            android:enabled="@{viewModel.uiState.enableLoginButton}"
            android:onClick="@{() -> viewModel.register()}"
            android:text="@string/mine_register"
            android:textColor="@color/businessWhite"
            android:textSize="16sp" />

    </LinearLayout>

</layout>
