<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.rm.module_mine.viewmodel.MineGetBookViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_14"
            android:text="@string/mine_book_info"
            android:textColor="@color/business_text_color_333333"
            android:textSize="@dimen/business_text_size_14sp" />


        <androidx.appcompat.widget.AppCompatEditText
            afterTextChanged="@{viewModel.bookInfo}"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/business_shape_f7f7f7_8dp"
            android:gravity="center_vertical"
            android:hint="@string/mine_hint_book_info_tips"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:singleLine="true"
            android:textColor="@color/business_text_color_333333"
            android:textCursorDrawable="@drawable/login_shape_cursor_ff5e5e"
            android:textSize="@dimen/business_text_size_14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_14"
            android:text="@string/mine_author_name"
            android:textColor="@color/business_text_color_333333"
            android:textSize="@dimen/business_text_size_14sp" />


        <androidx.appcompat.widget.AppCompatEditText
            afterTextChanged="@{viewModel.authorInfo}"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/business_shape_f7f7f7_8dp"
            android:gravity="center_vertical"
            android:hint="@string/mine_hint_optional_tips"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:singleLine="true"
            android:textColor="@color/business_text_color_333333"
            android:textCursorDrawable="@drawable/login_shape_cursor_ff5e5e"
            android:textSize="@dimen/business_text_size_14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_14"
            android:text="@string/mine_member_name"
            android:textColor="@color/business_text_color_333333"
            android:textSize="@dimen/business_text_size_14sp" />


        <androidx.appcompat.widget.AppCompatEditText
            afterTextChanged="@{viewModel.memberInfo}"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/business_shape_f7f7f7_8dp"
            android:gravity="center_vertical"
            android:hint="@string/mine_hint_optional_tips"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:singleLine="true"
            android:textColor="@color/business_text_color_333333"
            android:textCursorDrawable="@drawable/login_shape_cursor_ff5e5e"
            android:textSize="@dimen/business_text_size_14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_14"
            android:text="@string/mine_contact"
            android:textColor="@color/business_text_color_333333"
            android:textSize="@dimen/business_text_size_14sp" />


        <androidx.appcompat.widget.AppCompatEditText
            afterTextChanged="@{viewModel.contactInfo}"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/business_shape_f7f7f7_8dp"
            android:gravity="center_vertical"
            android:hint="@string/mine_hint_contact_tips"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:singleLine="true"
            android:textColor="@color/business_text_color_333333"
            android:textCursorDrawable="@drawable/login_shape_cursor_ff5e5e"
            android:textSize="@dimen/business_text_size_14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_52"
            android:layout_marginTop="@dimen/dp_34"
            android:background="@{viewModel.bookName.length()>0?@drawable/business_shape_round_ff5e5e_32dp:@drawable/business_shape_round_e8e8e8_37dp}"
            android:gravity="center"
            android:enabled="@{viewModel.bookName.length()>0}"
            android:onClick="@{()->viewModel.requestBook()}"
            android:text="@string/mine_submit"
            android:textColor="@color/business_text_color_ffffff"
            android:textSize="@dimen/business_text_size_16sp" />

        <androidx.appcompat.widget.AppCompatImageView
            isVisible="@{viewModel.bookName.length()>0}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/business_menu_red_bg" />


    </LinearLayout>
</layout>