<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.rm.module_mine.viewmodel.MinePersonalInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="@drawable/business_shape_round_ffffff_14dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/mine_dialog_sex_cancel">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mine_dialog_sex_man"
                style="@style/BusinessTextStyleFirst_2"
                android:layout_width="match_parent"
                android:gravity="center"
                android:onClick="@{()->viewModel.sexDialogClickManFun(1)}"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:text="@string/mine_man" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5pt"
                android:background="@color/business_color_e8e8e8" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mine_dialog_sex_woman"
                style="@style/BusinessTextStyleFirst_2"
                android:layout_width="match_parent"
                android:gravity="center"
                android:onClick="@{()->viewModel.sexDialogClickManFun(2)}"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:text="@string/mine_woman" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5pt"
                android:background="@color/business_color_e8e8e8" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mine_dialog_sex_secret"
                style="@style/BusinessTextStyleFirst_2"
                android:layout_width="match_parent"
                android:gravity="center"
                android:onClick="@{()->viewModel.sexDialogClickManFun(0)}"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:text="@string/mine_secret" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mine_dialog_sex_cancel"
            style="@style/BusinessTextStyleFirst_2"
            android:layout_width="match_parent"
            android:background="@drawable/business_shape_round_ffffff_14dp"
            android:gravity="center"
            android:onClick="@{()->viewModel.sexDialogCancelFun()}"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:text="@string/business_cancel"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>